---
source: src/reg_compiler/tests.rs
expression: err
---
0 ; script
1 [   1]  Push           L20:  
2 [   1]  LoadImediate   r3[fn([fn([i64], 0)], 0)] (local *3)  
3 ; imediate killed 4 for global *0
4 [   1]  MemCpy         (global *0)  r3[fn([fn([i64], 0)], 0)] (1u)  
5 [   1]  Pop            
6 [   1]  Push           L24:  
7 [   1]  LoadImediate   r5[fn([nil], 0)] (local *3)  
8 ; imediate killed 6 for global *1
9 [   1]  MemCpy         (global *1)  r5[fn([nil], 0)] (1u)  
10 [   1]  Pop            
11 ; imediate killed 7 for global *1
12 [   0]  Move           r8[&fn([nil], 0)] (global *1)  
13 [   0]  Move           r9[fn([nil], 0)] r8[&fn([nil], 0)] 
14 [   0]  PreCall        r10[nil] r9[fn([nil], 0)] (0u)  
15 [   0]  Call           
16 [   0]  Halt           
17 ; anon0
18 ; imediate killed 1 for 2
19 [   1]  Return         (2)  (0u)  
20 ; t
21 [   1]  Push           L17:  
22 [   1]  LoadImediate   r2[fn([i64], 0)] (local *3)  
23 [   1]  Return         r2[fn([i64], 0)] (1u)  
24 ; main
25 [   1]  Return         r0[nil] (0u)
